--- a/src/app/components/restaurant-order/restaurant-order.component.html
+++ b/src/app/components/restaurant-order/restaurant-order.component.html
@@ -1,1 +1,12 @@
-<p>restaurant-order works!</p>
+<div class="btns">
+    <button routerLink="add-meal" mat-stroked-button color="primary">
+        Add Meal
+    </button>
+    <button routerLink="add-order" mat-stroked-button color="primary">
+        Add Order
+    </button>
+    <button mat-stroked-button color="primary">Reports</button>
+</div>
+<div class="container my-3">
+    <router-outlet></router-outlet>
+</div>
