--- a/src/app/components/add-meal/add-meal.component.html
+++ b/src/app/components/add-meal/add-meal.component.html
@@ -1,1 +1,47 @@
-<p>add-meal works!</p>
+<form class="add-meal" [formGroup]="mealForm" (ngSubmit)="addMeal()">
+    <div class="row text-center">
+        <!-- Name -->
+        <div class="col-md-6">
+            <mat-form-field appearance="legacy">
+                <mat-label>Name</mat-label>
+                <input matInput formControlName="name" type="text">
+            </mat-form-field>
+        </div>
+        <!-- Price -->
+        <div class="col-md-6">
+            <mat-form-field appearance="legacy">
+                <mat-label>price</mat-label>
+                <input matInput formControlName="price" type="number">
+            </mat-form-field>
+        </div>
+        <!-- Category -->
+        <div class="col-md-6">
+            <mat-form-field appearance="fill">
+                <mat-label>Select</mat-label>
+                <mat-select formControlName="category">
+                    <mat-option value="soups">Soups</mat-option>
+                    <mat-option value="salads">Salads</mat-option>
+                    <mat-option value="sandwiches">Sandwiches</mat-option>
+                    <mat-option value="fish">Fish</mat-option>
+                    <mat-option value="beef">Beef</mat-option>
+                    <mat-option value="chicken">Chicken</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <!-- Image -->
+        <div class="col-md-6 mt-3">
+            <input type="file" formControlName="image">
+        </div>
+        <!-- Description -->
+        <div class="col-md-12">
+            <mat-form-field class="example-full-width w-50">
+                <mat-label>Description</mat-label>
+                <textarea matInput formControlName="desc"></textarea>
+            </mat-form-field>
+        </div>
+        <!-- Btn -->
+        <div class="col-md-12">
+            <button mat-button color="primary" type="submit" [disabled]='mealForm.invalid'>Save</button>
+        </div>
+    </div>
+</form>
