--- a/src/app/components/add-order/add-order.component.html
+++ b/src/app/components/add-order/add-order.component.html
@@ -1,1 +1,69 @@
-<p>add-order works!</p>
+<form class="add-order" [formGroup]="orderForm" (ngSubmit)="addOrder()">
+    <div class="row text-center">
+        <!-- Category -->
+        <div class="col-md-6">
+            <mat-form-field appearance="fill">
+                <mat-label>Category</mat-label>
+                <mat-select formControlName="category" (selectionChange)="change($event.value)">
+                    <mat-option value="soups">Soups</mat-option>
+                    <mat-option value="salads">Salads</mat-option>
+                    <mat-option value="sandwiches">Sandwiches</mat-option>
+                    <mat-option value="fish">Fish</mat-option>
+                    <mat-option value="beef">Beef</mat-option>
+                    <mat-option value="chicken">Chicken</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <!-- Meal -->
+        <div class="col-md-6">
+            <mat-form-field appearance="fill" *ngIf="category">
+                <mat-label>Meal</mat-label>
+                <mat-select formControlName="meal" (selectionChange)="meal($event)">
+                    <mat-option *ngFor='let meal of meals' [value]="meal">{{meal.name}}</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <!-- q -->
+        <div class="col-md-6">
+            <mat-form-field appearance="legacy">
+                <mat-label>q</mat-label>
+                <input matInput formControlName="q" type="number" #q (change)='quantity(q.value)'>
+            </mat-form-field>
+        </div>
+        <div class="example-section">
+            <mat-checkbox class="example-margin" (click)="combo()">Combo - add 2LE</mat-checkbox>
+            <mat-checkbox class="example-margin" (click)="spicy()">Spicy - add 1LE</mat-checkbox>
+        </div>
+        <!-- price -->
+        <h2>Price: {{price}} LE</h2>
+        <!-- Btn -->
+        <div class="col-md-12">
+            <button mat-button color="primary" type="submit" [disabled]='orderForm.invalid'>Add</button>
+        </div>
+    </div>
+</form>
+<table class="table text-center">
+    <thead>
+        <tr>
+            <th>Items</th>
+            <th>Q</th>
+            <th>Price</th>
+            <th>Addons</th>
+            <th>total</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor='let order of allOrder'>
+            <td>{{order.item}}</td>
+            <td>{{order.q}}</td>
+            <td>{{order.price}}</td>
+            <td>{{order.totalPrice - order.price}}</td>
+            <td>{{order.totalPrice}}</td>
+        </tr>
+        <td colspan="4">Total Order</td>
+        <td>{{totalOrder}} LE</td>
+    </tbody>
+</table>
+<div>
+    <button mat-stroked-button color="primary" (click)='newOrder()'>New Order</button>
+</div>
